# state-machine

./: .gitignore  CMakeLists.txt  main.cpp
Examples/: StateA.cpp  StateA.h  StateB.cpp  StateB.h  StateC.cpp  StateC.h  Transition1.cpp  Transition1.h  Transition2.cpp  Transition2.h  Transition3.cpp  Transition3.h  Transition4.cpp  Transition4.h
StateMachine/: IState.h  ITransition.h  StateMachine.cpp  StateMachine.h
